Revision history for Perl extension Exception::Class::DBI.

0.94

0.93  2006-06-10T02:09:14
        - Reformatted some of the code and documentation so that it's
          easier to read.
        - Added 'handle' attribute to store the DBI handle for which the
          exception was thrown.
        - Switched to explicit accessors that reach in to the cached database
          handle stored. Suggested by Tim Bunce ages ago!
        - Added support for subclassing Exception::Class::DBI and its
          subclasses.

0.92  2004-06-17T17:42:37
        - Fixed test that was breaking with newer versions of DBI.

0.91  Tue Aug 26 02:25:56 2003
        - Switched to Module::Build.
        - Throwing exceptions with the "throw()" method, rather than
          die'ing with the construction of exceptions with the "net()"
          constructor.
        - Added POD tests.

0.90  Thu Dec 12 20:16:14 2002
        - Updated tests for Changes in DBI 1.30. Connection failures
          can now throw exceptions!
        - Removed TODO tests in sth.t. Tim has said that DBI attributes
          that return ARRAYs or HASHes will return undef when they're
          empty, rather than return emtpy ARRAYs or HASHes.
        - Incremented version to 0.90 to indicate high level of stability.

0.02  Tue Sep 17 03:33:56 2002
        - Documentation tweaks.
        - Fixed test to pass with Perl 5.6.1 and earlier.

0.01  Fri Aug 23 19:50:45 2002
	- Initial Release to the CPAN.
